<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ClientAddressFragment"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <ImageView
                android:id="@+id/imgvwIconAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="@dimen/padding_top_icon"
                android:src="@drawable/ic_home_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/textViewTituloDataClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="@dimen/edittext_margin_end_title"
                android:layout_marginStart="@dimen/edittext_margin_start_title"
                android:layout_marginTop="8dp"
                android:text="@string/direccion_cliente"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imgvwIconAddress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edittext_margin_end"
                android:layout_marginStart="@dimen/edittext_margin_start"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgvwIconAddress">

                <EditText
                    android:id="@+id/editText_prospect_Direccion_Calle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/prospect_address_principal_street"
                    android:inputType="textPersonName"
                    android:text=""
                    tools:layout_editor_absoluteX="72dp"
                    tools:layout_editor_absoluteY="199dp" />


            </android.support.design.widget.TextInputLayout>
            <TableLayout
                android:id="@+id/tableLayout_address_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edittext_margin_end"
                android:layout_marginStart="@dimen/edittext_margin_start"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAddress">
                <TableRow
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/tableRow1"
                    android:gravity="center_vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/editText_prospect_Outdoor_Number"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text=""
                            android:hint="@string/prospect_outdoor_number"

                            />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/editText_prospect_Indoor_Number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:text=""
                            android:hint="@string/prospect_indoor_number"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/editText_prospect_Cp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:text=""
                            android:hint="@string/prospect_postal_code"
                            />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/lineayLayoutSpinnerColony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/edittext_margin_end"
                android:layout_marginStart="@dimen/edittext_margin_start"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout_address_numbers">

                <TextView
                    android:id="@+id/textViewColony"
                    style="@style/TextView.InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Colonia" />

                <RelativeLayout
                    android:id="@+id/relativeLayoutColony"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinnerColony"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"

                        />
                    <ImageButton
                        android:id="@+id/button_search_colony"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_search_gray_24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/button_background_edittext"
                        android:text=""/>
                </RelativeLayout>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edittext_margin_end"
                android:layout_marginStart="@dimen/edittext_margin_start"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lineayLayoutSpinnerColony">


                <EditText
                    android:id="@+id/editText_prospect_Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/prospect_email"
                    android:inputType="textEmailAddress"
                    android:text=""
                    tools:layout_editor_absoluteX="72dp"
                    tools:layout_editor_absoluteY="199dp" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="230dp"
                android:src="@drawable/ic_email_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgvwIconAddress"
                app:layout_constraintVertical_bias="1.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</LinearLayout>